# fluf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: fluf.h
include/fluf/: app.h  app_internal.h  color.h  common.h  files.h  filesystem.h  graphics.h  math.h  time.h
include/fluf/containers/: str.h  vector.h
include/fluf/drawing/: batch.h  ibuffer.h  renderer.h  shader.h  simplerenderer.h  sprite.h  static_sprite.h  texture.h  varray.h  vbuffer.h
include/fluf/math/: color.h  spatial.h
libs/glad/: glad.c  glad.h
res/shaders/: basic.shader  light.shader  test.shader  texture.shader
res/textures/: smile.ase
src/: app.cpp  common.cpp  graphics.cpp  time.cpp
src/containers/: str.cpp
src/drawing/: batch.cpp  ibuffer.cpp  renderer.cpp  shader.cpp  simplerenderer.cpp  sprite.cpp  static_sprite.cpp  texture.cpp  varray.cpp  vbuffer.cpp
src/internal/: internal.h  platform.h  platform_glfw.cpp  platform_sdl2.cpp  renderer.h  renderer_opengl.cpp
test/: CMakeLists.txt  app.cpp  test.cpp  test.h  test_bad.cpp  test_batch.cpp  test_clear_color.cpp  test_clear_color.h
